--- a/Run_Decay_Scan.ipynb
+++ b/Run_Decay_Scan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from MiniTools import fit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,10 +51,10 @@
     "#                 Setting up Parameter Scan -- 2-dimensions\n",
     "# --------------------------------------------------------------------------------\n",
     "path_results = \"fit_data/\"\n",
-    "Npoints = 30\n",
+    "Npoints = 15\n",
     "\n",
     "# Range of |U_{\\mu4}|^2 scanned over 1e-4 to 1 in 30 steps\n",
-    "x_Vec = np.geomspace(1e-4, 1, Npoints)\n",
+    "x_Vec = np.geomspace(1e-4, 0.9, Npoints)\n",
     "\n",
     "# Range of gm4 for sterile decay model scanned over 0.1 to 100 in 30 steps\n",
     "y_Vec = np.geomspace(1e-1, 1e2, Npoints)\n",
@@ -56,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
