--- a/Run_Decay_Scan.ipynb
+++ b/Run_Decay_Scan.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -12,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,51 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# --------------------------------------------------------------------------------\n",
-    "#                 Setting up Parameter Scan -- 2-dimensions\n",
-    "# --------------------------------------------------------------------------------\n",
-    "path_results = \"fit_data/\"\n",
-    "Npoints = 30\n",
-    "\n",
-    "# Range of |U_{\\mu4}|^2 scanned over 1e-4 to 1 in 30 steps\n",
-    "x_Vec = np.geomspace(1e-4, 0.89, Npoints)\n",
-    "\n",
-    "# Range of m4 for sterile decay model scanned over 0.1 to 100 in 30 steps\n",
-    "y_Vec = np.geomspace(1e-1, 1e2, Npoints)\n",
-    "\n",
-    "# Cartesian product of grid\n",
-    "paramlist_decay = create_grid_of_params(g=10, m4=y_Vec, Ue4Sq=1e-1, Um4Sq=x_Vec)\n",
-    "\n",
-    "# Pure oscillation method\n",
-    "func_2Dscan_osc = partial(param_scan.DecayReturnMicroBooNEChi2, oscillations=True, decay=False, decouple_decay=False, disappearance=False)\n",
-    "\n",
-    "# Designed to run in parallel. Set the argument of \"Pool\" to 1 to disable this.\n",
-    "pool = Pool()\n",
-    "res = pool.map(func_2Dscan_osc, paramlist_decay)\n",
-    "np.save(f\"{path_results}/App_gm4_Um4sq_osc_decay_deg_g=10_Ue4Sq=0.1_osc_8\", res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Oscillation + Decay"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,15 +411,52 @@
     "y_Vec = np.geomspace(1e-1, 1e2, Npoints)\n",
     "\n",
     "# Cartesian product of grid\n",
-    "paramlist_decay = create_grid_of_params(g=10, m4=y_Vec, Ue4Sq=1e-1, Um4Sq=x_Vec)\n",
+    "paramlist_decay = create_grid_of_params(g=1, m4=y_Vec, Ue4Sq=1e-1, Um4Sq=x_Vec)\n",
     "\n",
     "# Pure oscillation method\n",
-    "func_2Dscan_osc = partial(param_scan.DecayReturnMicroBooNEChi2, oscillations=True, decay=True)\n",
+    "func_2Dscan_osc = partial(param_scan.DecayReturnMicroBooNEChi2, oscillations=True, decay=False, decouple_decay=True, disappearance=False, energy_degradation=False)\n",
     "\n",
     "# Designed to run in parallel. Set the argument of \"Pool\" to 1 to disable this.\n",
     "pool = Pool()\n",
     "res = pool.map(func_2Dscan_osc, paramlist_decay)\n",
-    "np.save(f\"{path_results}/App_gm4_Um4sq_osc_decay_deg_g=10_Ue4Sq=0.1n=10000\", res)"
+    "np.save(f\"{path_results}/App_gm4_Um4sq_osc_decay_deg_g=1_Ue4Sq=0.1_osc_22\", res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Oscillation + Decay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --------------------------------------------------------------------------------\n",
+    "#                 Setting up Parameter Scan -- 2-dimensions\n",
+    "# --------------------------------------------------------------------------------\n",
+    "path_results = \"fit_data/\"\n",
+    "Npoints = 15\n",
+    "\n",
+    "# Range of |U_{\\mu4}|^2 scanned over 1e-4 to 1 in 30 steps\n",
+    "x_Vec = np.geomspace(1e-4, 0.94, Npoints)\n",
+    "\n",
+    "# Range of m4 for sterile decay model scanned over 0.1 to 100 in 30 steps\n",
+    "y_Vec = np.geomspace(1e-1, 1e2, Npoints)\n",
+    "\n",
+    "# Cartesian product of grid\n",
+    "paramlist_decay = create_grid_of_params(g=0.1, m4=y_Vec, Ue4Sq=5e-2, Um4Sq=x_Vec)\n",
+    "\n",
+    "# Pure oscillation method\n",
+    "func_2Dscan_osc = partial(param_scan.DecayReturnMicroBooNEChi2, oscillations=True, decay=True, decouple_decay=False, disappearance=True, energy_degradation=True)\n",
+    "\n",
+    "# Designed to run in parallel. Set the argument of \"Pool\" to 1 to disable this.\n",
+    "pool = Pool()\n",
+    "res = pool.map(func_2Dscan_osc, paramlist_decay)\n",
+    "np.save(f\"{path_results}/App_gm4_Um4sq_osc_decay_deg_g=0.1_Ue4Sq=0.1_dec_3\", res)"
    ]
   },
   {
