Fixed POT rescaling error for MicroBooNE only analysis.

--- a/Run_Decay_Scan.ipynb
+++ b/Run_Decay_Scan.ipynb
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,13 +406,13 @@
     "path_results = \"fit_data/\"\n",
     "Npoints = 30\n",
     "# Range of |U_{\\mu4}|^2 scanned \n",
-    "x_Vec = np.geomspace(1e-4/4, 1e-1/4, Npoints*2)\n",
+    "x_Vec = np.geomspace(1e-4/4, 0.89/4, Npoints)\n",
     "\n",
     "# Range of m4 for sterile decay model \n",
-    "y_Vec = np.geomspace(0.5, 1e1, int(Npoints/2))\n",
+    "y_Vec = np.geomspace(1e-1, 1e2, Npoints)\n",
     "\n",
     "# Cartesian product of grid\n",
-    "paramlist_decay = create_grid_of_params(g=1, m4=y_Vec, Ue4Sq=1, Um4Sq=x_Vec)\n",
+    "paramlist_decay = create_grid_of_params(g=1, m4=y_Vec, Ue4Sq=0.1, Um4Sq=x_Vec)\n",
     "\n",
     "# Pure oscillation method\n",
     "func_2Dscan_osc = partial(param_scan.DecayReturnMicroBooNEChi2, oscillations=True, decay=False, decouple_decay=True, disappearance=False, energy_degradation=False)\n",
@@ -420,7 +420,7 @@
     "# Designed to run in parallel. Set the argument of \"Pool\" to 1 to disable this.\n",
     "pool = Pool()\n",
     "res = pool.map(func_2Dscan_osc, paramlist_decay)\n",
-    "np.save(f\"{path_results}/Oscillation_only_test\", res)"
+    "np.save(f\"{path_results}/Oscillation_only_test_1\", res)"
    ]
   },
   {
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,16 +440,16 @@
     "#                 Setting up Parameter Scan -- 2-dimensions\n",
     "# --------------------------------------------------------------------------------\n",
     "path_results = \"fit_data/\"\n",
-    "Npoints = 15\n",
+    "Npoints = 30\n",
     "\n",
     "# Range of |U_{\\mu4}|^2 scanned over 1e-4 to 1 in 30 steps\n",
-    "x_Vec = np.geomspace(1e-4, 0.94, Npoints)\n",
+    "x_Vec = np.geomspace(1e-4/4, 0.89/4, Npoints)\n",
     "\n",
     "# Range of m4 for sterile decay model scanned over 0.1 to 100 in 30 steps\n",
-    "y_Vec = np.geomspace(1e-1, 1e2, Npoints)\n",
+    "y_Vec = np.geomspace(3e-1, 1e2, Npoints)\n",
     "\n",
     "# Cartesian product of grid\n",
-    "paramlist_decay = create_grid_of_params(g=0.1, m4=y_Vec, Ue4Sq=5e-2, Um4Sq=x_Vec)\n",
+    "paramlist_decay = create_grid_of_params(g=0.1, m4=y_Vec, Ue4Sq=0.05, Um4Sq=x_Vec)\n",
     "\n",
     "# Pure oscillation method\n",
     "func_2Dscan_osc = partial(param_scan.DecayReturnMicroBooNEChi2, oscillations=True, decay=True, decouple_decay=False, disappearance=True, energy_degradation=True)\n",
@@ -457,7 +457,7 @@
     "# Designed to run in parallel. Set the argument of \"Pool\" to 1 to disable this.\n",
     "pool = Pool()\n",
     "res = pool.map(func_2Dscan_osc, paramlist_decay)\n",
-    "np.save(f\"{path_results}/App_gm4_Um4sq_osc_decay_deg_g=0.1_Ue4Sq=0.1_dec_3\", res)"
+    "np.save(f\"{path_results}/App_gm4_Um4sq_osc_decay_deg_g=0.1_Ue4Sq=0.05_test\", res)"
    ]
   },
   {
@@ -915,7 +915,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
