--- a/Run_Decay_Scan.ipynb
+++ b/Run_Decay_Scan.ipynb
@@ -494,6 +494,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Oscillation + decay 4D scan"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 129,
    "metadata": {},
@@ -522,7 +529,7 @@
     "paramlist_decay = create_grid_of_params(g=g_Vec, m4=m_Vec, Ue4Sq=e_Vec, Um4Sq=mu_Vec)\n",
     "\n",
     "# Pure oscillation method\n",
-    "func_3Dscan_decay = partial(param_scan.DecayReturnMicroBooNEChi2, oscillations=True, decay=True)\n",
+    "func_3Dscan_decay = partial(param_scan.DecayReturnMicroBooNEChi2, oscillations=True, decay=True, decouple_decay=False, disappearance=True, energy_degradation=True)\n",
     "\n",
     "# Designed to run in parallel. Set the argument of \"Pool\" to 1 to disable this.\n",
     "pool = Pool()\n",
