fixed disappeaerance for Mini

--- a/MH_MiniBooNE_nue_MC.ipynb
+++ b/MH_MiniBooNE_nue_MC.ipynb
@@ -167,7 +167,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x169a499a0>"
+       "<matplotlib.legend.Legend at 0x16b7baca0>"
       ]
      },
      "execution_count": 9,
