--- a/Run_Decay_Scan.ipynb
+++ b/Run_Decay_Scan.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,32 +343,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "'miniboone_nuedata_lowe.txt' resource not found in 'MiniTools.include.MB_data_release_2018.fhcmode'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRemoteTraceback\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[0;31mRemoteTraceback\u001b[0m: \n\"\"\"\nTraceback (most recent call last):\n  File \"/usr/local/anaconda3/envs/py39/lib/python3.9/importlib/resources.py\", line 97, in open_binary\n    return open(full_path, mode='rb')\nFileNotFoundError: [Errno 2] No such file or directory: '/Users/matheushostert/Repos/muB_oscillation/miniboone_nuedata_lowe.txt'\n\nDuring handling of the above exception, another exception occurred:\n\nTraceback (most recent call last):\n  File \"/usr/local/anaconda3/envs/py39/lib/python3.9/multiprocessing/pool.py\", line 125, in worker\n    result = (True, func(*args, **kwds))\n  File \"/usr/local/anaconda3/envs/py39/lib/python3.9/multiprocessing/pool.py\", line 48, in mapstar\n    return list(map(*args))\n  File \"/Users/matheushostert/Repos/muB_oscillation/param_scan.py\", line 575, in DecayReturnMicroBooNEChi2\n    MB_chi2 = mini.fit.chi2_MiniBooNE(MBSig_for_MBfit, Rmumu=1.0, Ree=1.0)\n  File \"/Users/matheushostert/Repos/muB_oscillation/MiniTools/fit.py\", line 90, in chi2_MiniBooNE\n    open_text(\n  File \"/usr/local/anaconda3/envs/py39/lib/python3.9/importlib/resources.py\", line 121, in open_text\n    open_binary(package, resource), encoding=encoding, errors=errors)\n  File \"/usr/local/anaconda3/envs/py39/lib/python3.9/importlib/resources.py\", line 111, in open_binary\n    raise FileNotFoundError(message)\nFileNotFoundError: 'miniboone_nuedata_lowe.txt' resource not found in 'MiniTools.include.MB_data_release_2018.fhcmode'\n\"\"\"",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 20\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# Designed to run in parallel. Set the argument of \"Pool\" to 1 to disable this.\u001b[39;00m\n\u001b[1;32m     19\u001b[0m pool \u001b[38;5;241m=\u001b[39m Pool()\n\u001b[0;32m---> 20\u001b[0m res \u001b[38;5;241m=\u001b[39m \u001b[43mpool\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmap\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfunc_2Dscan_deGouvea\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparamlist_decay\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     21\u001b[0m np\u001b[38;5;241m.\u001b[39msave(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpath_results\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/App_gm4_Um4sq_deGouvea\u001b[39m\u001b[38;5;124m\"\u001b[39m, res)\n",
-      "File \u001b[0;32m/usr/local/anaconda3/envs/py39/lib/python3.9/multiprocessing/pool.py:364\u001b[0m, in \u001b[0;36mPool.map\u001b[0;34m(self, func, iterable, chunksize)\u001b[0m\n\u001b[1;32m    359\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmap\u001b[39m(\u001b[38;5;28mself\u001b[39m, func, iterable, chunksize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m    360\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[1;32m    361\u001b[0m \u001b[38;5;124;03m    Apply `func` to each element in `iterable`, collecting the results\u001b[39;00m\n\u001b[1;32m    362\u001b[0m \u001b[38;5;124;03m    in a list that is returned.\u001b[39;00m\n\u001b[1;32m    363\u001b[0m \u001b[38;5;124;03m    '''\u001b[39;00m\n\u001b[0;32m--> 364\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_map_async\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43miterable\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmapstar\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mchunksize\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/usr/local/anaconda3/envs/py39/lib/python3.9/multiprocessing/pool.py:771\u001b[0m, in \u001b[0;36mApplyResult.get\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    769\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_value\n\u001b[1;32m    770\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 771\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_value\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: 'miniboone_nuedata_lowe.txt' resource not found in 'MiniTools.include.MB_data_release_2018.fhcmode'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# --------------------------------------------------------------------------------\n",
     "#                 Setting up Parameter Scan -- 2-dimensions\n",
     "# --------------------------------------------------------------------------------\n",
     "path_results = \"fit_data/\"\n",
-    "Npoints = 10\n",
+    "Npoints = 30\n",
+    "\n",
+    "# Range of |U_{\\mu4}|^2 scanned over 1e-4 to 1 in 30 steps\n",
+    "x_Vec = np.geomspace(1e-4, 0.9, Npoints)\n",
+    "\n",
+    "# Range of gm4 for sterile decay model scanned over 0.1 to 100 in 30 steps\n",
+    "y_Vec = np.geomspace(1e-1, 1e2, Npoints)\n",
+    "\n",
+    "# Cartesian product of grid\n",
+    "paramlist_decay = create_grid_of_params(g=1, m4=y_Vec, Ue4Sq=1e-2, Um4Sq=x_Vec)\n",
+    "\n",
+    "#func_2Dscan_deGouvea = partial(param_scan.DecayReturnMicroBooNEChi2, oscillations=False, decay=True, decouple_decay=True)\n",
+    "func_2Dscan_deGouvea = partial(param_scan.MiniBooNEChi2_deGouvea)\n",
+    "\n",
+    "# Designed to run in parallel. Set the argument of \"Pool\" to 1 to disable this.\n",
+    "pool = Pool()\n",
+    "res = pool.map(func_2Dscan_deGouvea, paramlist_decay)\n",
+    "np.save(f\"{path_results}/App_deg_gm4_Um4sq_deGouvea_mini\", res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Decoupled Decay(not de Gouvea)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --------------------------------------------------------------------------------\n",
+    "#                 Setting up Parameter Scan -- 2-dimensions\n",
+    "# --------------------------------------------------------------------------------\n",
+    "path_results = \"fit_data/\"\n",
+    "Npoints = 30\n",
     "\n",
     "# Range of |U_{\\mu4}|^2 scanned over 1e-4 to 1 in 30 steps\n",
     "x_Vec = np.geomspace(1e-4, 0.9, Npoints)\n",
@@ -388,12 +399,12 @@
     "# Cartesian product of grid\n",
     "paramlist_decay = create_grid_of_params(g=1, m4=y_Vec, Ue4Sq=1e-1, Um4Sq=x_Vec)\n",
     "\n",
-    "func_2Dscan_deGouvea = partial(param_scan.DecayReturnMicroBooNEChi2, oscillations=False, decay=True, decouple_decay=True)\n",
+    "func_2Dscan_decoupled = partial(param_scan.DecayReturnMicroBooNEChi2, oscillations=False, decay=True, decouple_decay=True)\n",
     "\n",
     "# Designed to run in parallel. Set the argument of \"Pool\" to 1 to disable this.\n",
     "pool = Pool()\n",
-    "res = pool.map(func_2Dscan_deGouvea, paramlist_decay)\n",
-    "np.save(f\"{path_results}/App_gm4_Um4sq_deGouvea\", res)"
+    "res = pool.map(func_2Dscan_decoupled, paramlist_decay)\n",
+    "np.save(f\"{path_results}/App_gm4_Um4sq_decoupled_eparent\", res)"
    ]
   },
   {
@@ -932,7 +943,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
