--- a/MH_param_scans.ipynb
+++ b/MH_param_scans.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "57b30225-60f2-4b20-bd77-48ede436f6b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -13,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "c64e5fe4-fd59-4292-88d2-22e4d0dc4196",
    "metadata": {},
    "outputs": [],
@@ -33,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "1242f3a5-79f6-4171-b3bc-fed601f06e3e",
    "metadata": {},
    "outputs": [],
@@ -45,19 +54,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "baabf34e-76b7-4279-9bb8-1311a37d60fe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "847a61276c4d469faa3297fcc56378f8",
+       "model_id": "f46930f32e2440f7811fafd391940d06",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/100 [00:00<?, ?it/s]"
+       "  0%|          | 0/9 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -70,7 +79,7 @@
     "    #                 Setting up Parameter Scan -- 3-dimensions\n",
     "    # --------------------------------------------------------------------------------\n",
     "    path_results = \"fit_data/\"\n",
-    "    Npoints = 10\n",
+    "    Npoints = 3\n",
     "\n",
     "    # Range of mixings scanned \n",
     "    sin2theta4e_Vec = np.geomspace(1e-4, 0.03, Npoints)\n",
