Add oscillation only conditional statement for MicroBooNE

--- a/Run_Decay_Scan.ipynb
+++ b/Run_Decay_Scan.ipynb
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,15 +470,16 @@
     "y_Vec = np.geomspace(3e-1, 1e2, Npoints)\n",
     "\n",
     "# Cartesian product of grid\n",
-    "paramlist_decay = create_grid_of_params(g=0.1, m4=y_Vec, Ue4Sq=0.05, Um4Sq=x_Vec)\n",
+    "paramlist_decay = create_grid_of_params(g=1, m4=y_Vec, Ue4Sq=0.1, Um4Sq=x_Vec)\n",
     "\n",
     "# Pure oscillation method\n",
-    "func_2Dscan_osc = partial(param_scan.DecayReturnMicroBooNEChi2, oscillations=True, decay=True, decouple_decay=False, disappearance=True, energy_degradation=True)\n",
+    "func_2Dscan_osc = partial(param_scan.DecayReturnMicroBooNEChi2, oscillations=True, decay=True, decouple_decay=False, disappearance=True, energy_degradation=True, use_numu_MC=True, include_antineutrinos=True)\n",
     "\n",
     "# Designed to run in parallel. Set the argument of \"Pool\" to 1 to disable this.\n",
     "pool = Pool()\n",
     "res = pool.map(func_2Dscan_osc, paramlist_decay)\n",
-    "np.save(f\"{path_results}/App_gm4_Um4sq_osc_decay_deg_g=0.1_Ue4Sq=0.05_test\", res)"
+    "#np.save(f\"{path_results}/App_gm4_Um4sq_osc_decay_deg_g=0.1_Ue4Sq=0.05_test\", res)\n",
+    "np.save(f\"{path_results}/g=1e=0.1\", res)\n"
    ]
   },
   {
@@ -929,9 +930,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:.conda-darknews-3.10]",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-env-.conda-darknews-3.10-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
