fixed xsec interpolation issue

--- a/MH_decay_scans.ipynb
+++ b/MH_decay_scans.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c64e5fe4-fd59-4292-88d2-22e4d0dc4196",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
     "import MicroTools as micro\n",
     "import MicroTools.plot_tools as pt\n",
     "\n",
-    "import param_scan\n",
+    "import MicroTools.param_scan as param_scan\n",
     "from tqdm.notebook import tqdm"
    ]
   },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0f009bda-86da-4596-9bf0-6594f5291516",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "2c744967-0e4c-4637-ba3c-124aaf95e597",
    "metadata": {},
    "outputs": [],
@@ -103,12 +103,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "b413baa0-8bc3-4c3d-a890-49f53ab5aaf4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "61871ac1a4124a70854fc5b6268af52f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/6 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mhostert/Repos/muB_oscillation/MicroTools/sterile_tools.py:642: RuntimeWarning: invalid value encountered in divide\n",
+      "  np.where(xsec_nu4 > 0, Xsec(Edaughter) / xsec_nu4, 0)\n",
+      "/Users/mhostert/Repos/muB_oscillation/MicroTools/sterile_tools.py:642: RuntimeWarning: invalid value encountered in divide\n",
+      "  np.where(xsec_nu4 > 0, Xsec(Edaughter) / xsec_nu4, 0)\n",
+      "/Users/mhostert/Repos/muB_oscillation/MicroTools/sterile_tools.py:642: RuntimeWarning: invalid value encountered in divide\n",
+      "  np.where(xsec_nu4 > 0, Xsec(Edaughter) / xsec_nu4, 0)\n",
+      "/Users/mhostert/Repos/muB_oscillation/MicroTools/sterile_tools.py:642: RuntimeWarning: invalid value encountered in divide\n",
+      "  np.where(xsec_nu4 > 0, Xsec(Edaughter) / xsec_nu4, 0)\n",
+      "/Users/mhostert/Repos/muB_oscillation/MicroTools/sterile_tools.py:642: RuntimeWarning: invalid value encountered in divide\n",
+      "  np.where(xsec_nu4 > 0, Xsec(Edaughter) / xsec_nu4, 0)\n",
+      "/Users/mhostert/Repos/muB_oscillation/MicroTools/sterile_tools.py:642: RuntimeWarning: invalid value encountered in divide\n",
+      "  np.where(xsec_nu4 > 0, Xsec(Edaughter) / xsec_nu4, 0)\n"
+     ]
+    }
+   ],
    "source": [
-    "PERFORM_SCAN = False\n",
+    "PERFORM_SCAN = True\n",
     "if PERFORM_SCAN:\n",
     "    n = 2\n",
     "    _ = run_scan(kwargs_std, 'MH_decay_test_2', Npoints=n)"
@@ -121,32 +154,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import MH_decay_scan_run\n",
-    "# n = 20\n",
-    "# if PERFORM_SCAN:\n",
-    "#     _ = MH_decay_scan_run.run_scan_gfixed_Ue4SQRfixed(\n",
-    "#         MH_decay_scan_run.kwargs_std,\n",
-    "#         \"MH_decay_gfixed_2.5_Ue4SQRfixed_0.05\",\n",
-    "#         Npoints=n,\n",
-    "#         gfixed=2.5,\n",
-    "#         Ue4SQRfixed=0.05,\n",
-    "#     )\n",
+    "import MH_decay_scan_run\n",
+    "n = 2\n",
+    "if PERFORM_SCAN:\n",
+    "    _ = MH_decay_scan_run.run_scan_gfixed_Ue4SQRfixed(\n",
+    "        MH_decay_scan_run.kwargs_std,\n",
+    "        \"MH_decay_gfixed_2.5_Ue4SQRfixed_0.05\",\n",
+    "        Npoints=n,\n",
+    "        gfixed=2.5,\n",
+    "        Ue4SQRfixed=0.05,\n",
+    "    )\n",
     "\n",
-    "#     _ = MH_decay_scan_run.run_scan_gfixed_Ue4SQRfixed(\n",
-    "#         MH_decay_scan_run.kwargs_std,\n",
-    "#         \"MH_decay_gfixed_2.5_Ue4SQRfixed_0.10\",\n",
-    "#         Npoints=n,\n",
-    "#         gfixed=2.5,\n",
-    "#         Ue4SQRfixed=0.10,\n",
-    "#     )\n",
+    "    _ = MH_decay_scan_run.run_scan_gfixed_Ue4SQRfixed(\n",
+    "        MH_decay_scan_run.kwargs_std,\n",
+    "        \"MH_decay_gfixed_2.5_Ue4SQRfixed_0.10\",\n",
+    "        Npoints=n,\n",
+    "        gfixed=2.5,\n",
+    "        Ue4SQRfixed=0.10,\n",
+    "    )\n",
     "\n",
-    "#     _ = MH_decay_scan_run.run_scan_gfixed_Ue4SQRfixed(\n",
-    "#         MH_decay_scan_run.kwargs_std,\n",
-    "#         \"MH_decay_gfixed_2.5_Ue4SQRfixed_0.01\",\n",
-    "#         Npoints=n,\n",
-    "#         gfixed=2.5,\n",
-    "#         Ue4SQRfixed=0.01,\n",
-    "#     )"
+    "    _ = MH_decay_scan_run.run_scan_gfixed_Ue4SQRfixed(\n",
+    "        MH_decay_scan_run.kwargs_std,\n",
+    "        \"MH_decay_gfixed_2.5_Ue4SQRfixed_0.01\",\n",
+    "        Npoints=n,\n",
+    "        gfixed=2.5,\n",
+    "        Ue4SQRfixed=0.01,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d5e9104c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/6 [00:00<?, ?it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "import MH_decay_scan_run\n",
+    "\n",
+    "_ = MH_decay_scan_run.run_scan_4D(MH_decay_scan_run.kwargs_std, f\"MH_decay_4D_{3}\", Npoints=2)\n"
    ]
   },
   {
