remove a few numba redundant things and fixed scan notebook

--- a/MH_decay_scans.ipynb
+++ b/MH_decay_scans.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c64e5fe4-fd59-4292-88d2-22e4d0dc4196",
    "metadata": {},
    "outputs": [],
@@ -43,108 +43,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "0f009bda-86da-4596-9bf0-6594f5291516",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def run_scan(kwargs, filename, Npoints=10, path_results = \"fit_data/\", sin2theta_scan=False):\n",
-    "\n",
-    "    # Range of mixings scanned \n",
-    "    dm_Vec = np.geomspace(np.sqrt(1e-1), np.sqrt(1e5), Npoints)\n",
-    "    g_Vec = np.geomspace(1e-2, 10, Npoints)\n",
-    "\n",
-    "    if sin2theta_scan:\n",
-    "        s2thetaSq = np.geomspace(1e-4, 0.5, Npoints)\n",
-    "        Umu4Sq = 0.5\n",
-    "        # Cartesian product of grid -- already imposes unitarity and pertubatirbity of g\n",
-    "        paramlist = param_scan.create_grid_of_params_sin2theta(g=g_Vec, m4=dm_Vec, sin2thetaSq=s2thetaSq, Um4Sq=Umu4Sq)\n",
-    "        \n",
-    "    else:\n",
-    "        Ue4Sq = np.geomspace(1e-3, 0.5, Npoints)\n",
-    "        Umu4Sq = np.geomspace(1e-3, 0.5, Npoints)\n",
-    "        # Cartesian product of grid -- already imposes unitarity and pertubatirbity of g\n",
-    "        paramlist = param_scan.create_grid_of_params(g=g_Vec, m4=dm_Vec, Ue4Sq=Ue4Sq, Um4Sq=Umu4Sq)\n",
-    "\n",
-    "    # Pure oscillation method\n",
-    "    func_scan = partial(param_scan.DecayReturnMicroBooNEChi2, **kwargs)\n",
-    "\n",
-    "    with Pool() as pool:\n",
-    "        # res = pool.map(func_scan, paramlist)\n",
-    "        res = np.array(list(tqdm(pool.imap(func_scan, paramlist), total=len(paramlist))))\n",
-    "\n",
-    "    param_scan.write_pickle(f\"{path_results}/{filename}\", res)\n",
-    "    return res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "2c744967-0e4c-4637-ba3c-124aaf95e597",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Common attributes to all osc_only scans\n",
     "kwargs_common = {\n",
-    "    'oscillations': True, \n",
-    "    'decay': True, \n",
-    "    'decouple_decay': False, \n",
-    "    'energy_degradation': True, \n",
-    "    'include_antineutrinos': True,\n",
-    "    'n_replications': 10}\n",
+    "    \"oscillations\": True,\n",
+    "    \"decay\": True,\n",
+    "    \"decouple_decay\": False,\n",
+    "    \"energy_degradation\": True,\n",
+    "    \"include_antineutrinos\": True,\n",
+    "    \"n_replications\": 10,\n",
+    "    \"helicity\": 'conserving'\n",
+    "}\n",
     "\n",
     "# Full and Standard case\n",
     "kwargs_std = {\n",
-    "    'disappearance': True, \n",
-    "    'use_numu_MC': True,\n",
-    "    'undo_numu_normalization': False,\n",
-    "    **kwargs_common}"
+    "    \"disappearance\": True,\n",
+    "    \"use_numu_MC\": True,\n",
+    "    \"undo_numu_normalization\": False,\n",
+    "    **kwargs_common,\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "410486c9-7314-472a-a04c-3dd1150cfa74",
+   "metadata": {},
+   "source": [
+    "## Run main scans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b7113736-b824-49cc-9ec2-ddea8195acdb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import MH_decay_scan_run\n",
+    "\n",
+    "MOCK_SCAN = False\n",
+    "N_MOCK = 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b413baa0-8bc3-4c3d-a890-49f53ab5aaf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 4D scans\n",
+    "n = 30 if not MOCK_SCAN else N_MOCK\n",
+    "_ = MH_decay_scan_run.run_scan_4D(kwargs_std, f\"MH_decay_4D_{n}_{kwargs_std['helicity']}\", Npoints=n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0021848c-3eef-44ba-8130-571c24ce3156",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/26970 [00:00<?, ?it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "n = 30 if not MOCK_SCAN else N_MOCK\n",
+    "\n",
+    "# 3D scans\n",
+    "_ = MH_decay_scan_run.run_scan_gfixed_3D(\n",
+    "    kwargs_std, f\"MH_decay_gfixed_2.5_3D_{n}_{kwargs_std['helicity']}\", Npoints=n, gfixed=2.5\n",
+    ")\n",
+    "_ = MH_decay_scan_run.run_scan_gfixed_3D(\n",
+    "    kwargs_std, f\"MH_decay_gfixed_1.0_3D_{n}_{kwargs_std['helicity']}\", Npoints=n, gfixed=1.0\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b413baa0-8bc3-4c3d-a890-49f53ab5aaf4",
+   "id": "4c4c69c8-c2be-4ef2-8f8a-901e2e5dafbc",
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61871ac1a4124a70854fc5b6268af52f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/6 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/mhostert/Repos/muB_oscillation/MicroTools/sterile_tools.py:642: RuntimeWarning: invalid value encountered in divide\n",
-      "  np.where(xsec_nu4 > 0, Xsec(Edaughter) / xsec_nu4, 0)\n",
-      "/Users/mhostert/Repos/muB_oscillation/MicroTools/sterile_tools.py:642: RuntimeWarning: invalid value encountered in divide\n",
-      "  np.where(xsec_nu4 > 0, Xsec(Edaughter) / xsec_nu4, 0)\n",
-      "/Users/mhostert/Repos/muB_oscillation/MicroTools/sterile_tools.py:642: RuntimeWarning: invalid value encountered in divide\n",
-      "  np.where(xsec_nu4 > 0, Xsec(Edaughter) / xsec_nu4, 0)\n",
-      "/Users/mhostert/Repos/muB_oscillation/MicroTools/sterile_tools.py:642: RuntimeWarning: invalid value encountered in divide\n",
-      "  np.where(xsec_nu4 > 0, Xsec(Edaughter) / xsec_nu4, 0)\n",
-      "/Users/mhostert/Repos/muB_oscillation/MicroTools/sterile_tools.py:642: RuntimeWarning: invalid value encountered in divide\n",
-      "  np.where(xsec_nu4 > 0, Xsec(Edaughter) / xsec_nu4, 0)\n",
-      "/Users/mhostert/Repos/muB_oscillation/MicroTools/sterile_tools.py:642: RuntimeWarning: invalid value encountered in divide\n",
-      "  np.where(xsec_nu4 > 0, Xsec(Edaughter) / xsec_nu4, 0)\n"
+      "100%|██████████| 16/16 [00:11<00:00,  1.41it/s]\n",
+      "100%|██████████| 16/16 [00:11<00:00,  1.42it/s]\n",
+      "100%|██████████| 16/16 [00:10<00:00,  1.58it/s]\n",
+      "100%|██████████| 16/16 [00:09<00:00,  1.64it/s]\n",
+      "100%|██████████| 16/16 [00:10<00:00,  1.54it/s]\n",
+      "100%|██████████| 16/16 [00:09<00:00,  1.65it/s]\n"
      ]
     }
    ],
    "source": [
-    "PERFORM_SCAN = True\n",
-    "if PERFORM_SCAN:\n",
-    "    n = 2\n",
-    "    _ = run_scan(kwargs_std, 'MH_decay_test_2', Npoints=n)"
+    "\n",
+    "n = 60 if not MOCK_SCAN else N_MOCK\n",
+    "# 2D scans\n",
+    "_ = MH_decay_scan_run.run_scan_gfixed_Ue4SQRfixed_2D(\n",
+    "    kwargs_std,\n",
+    "    f\"MH_decay_gfixed_2.5_Ue4SQRfixed_0.10_2D_{n}_{kwargs_std['helicity']}\",\n",
+    "    Npoints=n,\n",
+    "    gfixed=2.5,\n",
+    "    Ue4SQRfixed=0.10,\n",
+    ")\n",
+    "\n",
+    "_ = MH_decay_scan_run.run_scan_gfixed_Ue4SQRfixed_2D(\n",
+    "    kwargs_std,\n",
+    "    f\"MH_decay_gfixed_2.5_Ue4SQRfixed_0.05_2D_{n}_{kwargs_std['helicity']}\",\n",
+    "    Npoints=n,\n",
+    "    gfixed=2.5,\n",
+    "    Ue4SQRfixed=0.05,\n",
+    ")\n",
+    "_ = MH_decay_scan_run.run_scan_gfixed_Ue4SQRfixed_2D(\n",
+    "    kwargs_std,\n",
+    "    f\"MH_decay_gfixed_2.5_Ue4SQRfixed_0.01_2D_{n}_{kwargs_std['helicity']}\",\n",
+    "    Npoints=n,\n",
+    "    gfixed=2.5,\n",
+    "    Ue4SQRfixed=0.01,\n",
+    ")\n",
+    "\n",
+    "_ = MH_decay_scan_run.run_scan_gfixed_Ue4SQRfixed_2D(\n",
+    "    kwargs_std,\n",
+    "    f\"MH_decay_gfixed_1_Ue4SQRfixed_0.10_2D_{n}_{kwargs_std['helicity']}\",\n",
+    "    Npoints=n,\n",
+    "    gfixed=1,\n",
+    "    Ue4SQRfixed=0.10,\n",
+    ")\n",
+    "\n",
+    "_ = MH_decay_scan_run.run_scan_gfixed_Ue4SQRfixed_2D(\n",
+    "    kwargs_std,\n",
+    "    f\"MH_decay_gfixed_1_Ue4SQRfixed_0.05_2D_{n}_{kwargs_std['helicity']}\",\n",
+    "    Npoints=n,\n",
+    "    gfixed=1,\n",
+    "    Ue4SQRfixed=0.05,\n",
+    ")\n",
+    "_ = MH_decay_scan_run.run_scan_gfixed_Ue4SQRfixed_2D(\n",
+    "    kwargs_std,\n",
+    "    f\"MH_decay_gfixed_1_Ue4SQRfixed_0.01_2D_{n}_{kwargs_std['helicity']}\",\n",
+    "    Npoints=n,\n",
+    "    gfixed=1,\n",
+    "    Ue4SQRfixed=0.01,\n",
+    ")\n"
    ]
   },
   {
@@ -1237,9 +1289,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:.conda-darknews-3.10]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-.conda-darknews-3.10-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1251,7 +1303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
