--- a/MH_MiniBooNE_nue_MC.ipynb
+++ b/MH_MiniBooNE_nue_MC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,18 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/dl/ccbsfs591r1fhgcws28m8xy40000gn/T/ipykernel_83002/473819619.py:6: DeprecationWarning: open_text is deprecated. Use files() instead. Refer to https://importlib-resources.readthedocs.io/en/latest/using.html#migrating-from-legacy for migration advice.\n",
-      "  e, sigma = np.genfromtxt(open_text('MiniTools.include.miniboone_eff', 'xsec.dat'), unpack=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from scipy.interpolate import interp1d\n",
     "from MicroTools import sterile_tools\n",
@@ -54,7 +45,7 @@
     "\n",
     "e, sigma = np.genfromtxt(open_text('MiniTools.include.miniboone_eff', 'xsec.dat'), unpack=True)\n",
     "\n",
-    "f_sigma = interp1d(e, sigma*e, kind='cubic', bounds_error=False, fill_value=(0,0))\n",
+    "f_sigma = interp1d(e, sigma*e/1e-38, kind='cubic', bounds_error=False, fill_value=(1e-10,sigma[-1]))\n",
     "np.save('MicroTools/InclusiveTools/f_sigma.npy', f_sigma)\n"
    ]
   },
@@ -726,9 +717,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:.conda-darknews-3.10]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-.conda-darknews-3.10-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -740,7 +731,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
