--- a/MH_MiniBooNE_nue_MC.ipynb
+++ b/MH_MiniBooNE_nue_MC.ipynb
@@ -717,9 +717,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:.conda-darknews-3.10]",
+   "display_name": "darknews",
    "language": "python",
-   "name": "conda-env-.conda-darknews-3.10-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -731,7 +731,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
