Final edits, IceCube and MINOS data

--- a/Tao_Decay_Scan.ipynb
+++ b/Tao_Decay_Scan.ipynb
@@ -1658,15 +1658,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best-fit g, m, e, mu, chi2 3.039195382313198 0.31622776601683794 0.20716573966075624 0.1544426500964737 35.326818621185694\n",
-      "PGOF_global: 14.58792884448664\n"
+      "best-fit g, m, e, mu, chi2 3.039195382313198 4.344412298729366 0.019765709878143814 0.010985277619674985 35.99979304895437\n",
+      "PGOF_global: 17.595737791625993\n"
      ]
     }
    ],
@@ -1674,7 +1674,7 @@
     "filename = 'MH_decay_4D_30'\n",
     "path_results = \"fit_data/\"\n",
     "data = np.load(f\"{path_results}/{filename}.pkl\", allow_pickle=True)\n",
-    "data = data[(data[:,2] < 1) & (data[:,3] > 0.02), :]\n",
+    "data = data[(data[:,2] < 1) & (data[:,3] < 0.02), :]\n",
     "\n",
     "slice = data\n",
     "chi_sq_BFP_JointFit = np.min(slice[:, -3]+slice[:, -2])\n",
