--- a/MH_best_fit_points.ipynb
+++ b/MH_best_fit_points.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "g = 1\n",
+      "dm4SQR = 1.3 eV^2\n",
+      "Ue4SQR = 0.075\n",
+      "Umu4SQR = 0.0001\n",
+      "MB chi2 = 39\n",
+      "MB pval = 8.8e-09%\n",
+      "Micro deltachi2 (bf - null) = -2.9\n",
+      "Micro deltachi2 (null) = 93\n",
+      "Micro deltachi2 (bf) = 90\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(param_scan.get_micro_bf_point_definition(dic_osc_full, ndof=9*2+2*8-4))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +186,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Helicity Flipping:\n",
+      " g = 2.5\n",
+      "dm4SQR = 68 eV^2\n",
+      "Ue4SQR = 0.05\n",
+      "Umu4SQR = 0.0075\n",
+      "MB chi2 = -41\n",
+      "MB pval = 10%\n",
+      "Micro deltachi2 = 19\n",
+      "\n",
+      "Helicity Conserving:\n",
+      " g = 2.5\n",
+      "dm4SQR = 0.13 eV^2\n",
+      "Ue4SQR = 0.05\n",
+      "Umu4SQR = 0.4\n",
+      "MB chi2 = -33\n",
+      "MB pval = 1.5%\n",
+      "Micro deltachi2 = 22\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Helicity Flipping:\\n', param_scan.get_bf_point_definition(param_scan.load_scan_data('fit_data/MH_decay_gfixed_2.5_Ue4SQRfixed_0.05_2D_60_flipping.pkl')))\n",
+    "print('Helicity Conserving:\\n', param_scan.get_bf_point_definition(param_scan.load_scan_data('fit_data/MH_decay_gfixed_2.5_Ue4SQRfixed_0.05_2D_40.pkl')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -241,6 +302,54 @@
     "print(param_scan.get_bf_point_definition(param_scan.load_scan_data(\"fit_data/MH_decay_gfixed_1.0_3D_40.pkl\"), Ue4SQRmax=0.1, Umu4SQRmax=0.1))\n",
     "print(param_scan.get_bf_point_definition(param_scan.load_scan_data(\"fit_data/MH_decay_4D_30.pkl\"), Ue4SQRmax=0.1, Umu4SQRmax=0.1))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "g = 3.04\n",
+      "dm4SQR = 1.1 eV^2\n",
+      "Ue4SQR = 0.086\n",
+      "Umu4SQR = 0.00013\n",
+      "MB chi2 = 37\n",
+      "MB pval = 8.7e-12%\n",
+      "Micro deltachi2 (bf - null) = -2.8\n",
+      "Micro deltachi2 (null) = 93\n",
+      "Micro deltachi2 (bf) = 90\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(param_scan.get_micro_bf_point_definition(param_scan.load_scan_data(\"fit_data/MH_decay_4D_30.pkl\"), Ue4SQRmax=0.4, Umu4SQRmin=1e-4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9999999983109038"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import chi2\n",
+    "\n",
+    "chi2.sf(86.62, 179-3)"
+   ]
   }
  ],
  "metadata": {
@@ -259,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
